Fix Bug 343745 - Crash with an invalid external editor involving unterminated quotes

FIXED-IN: 14.12.3
BUG: 343745